# TaskPlusPlus

./: .gitignore  BUILD.md  CMakeLists.txt  PROJECT_OVERVIEW.md  README.md  build.sh  main.cpp  plan.md  run.sh  vcpkg.json
src/: main.cpp
src/auth/: JwtHelper.cpp  JwtHelper.hpp  PasswordHasher.cpp  PasswordHasher.hpp
src/db/: Database.cpp  Database.hpp
src/models/: Task.hpp  User.hpp
src/repositories/: TaskRepository.cpp  TaskRepository.hpp  UserRepository.cpp  UserRepository.hpp
src/services/: AuthService.cpp  AuthService.hpp  TaskService.cpp  TaskService.hpp
